# EdgeGuard

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EDGEGUARD_OVERVIEW.md  LICENSE  Makefile  README.md
.github/workflows/: benchmarks.yml
docs/: README.md  getting-started.md
docs/api/: README.md  connectors.md  fusion.md  ml.md  pipeline.md  schemas.md  streams.md  time.md  validators.md
docs/api/python/: README.md  conversion.md  events.md  fusion.md  helpers.md  pipeline.md  time.md  validators.md
docs/examples/: README.md
docs/guides/: architecture.md  deployment.md  desktop.md  esp32.md  raspberry-pi.md  troubleshooting.md
edgeguard-connectors/: Cargo.toml
edgeguard-connectors/src/: coap.rs  http.rs  lib.rs  mqtt.rs
edgeguard-core/: API_REFERENCE.md  Cargo.toml  build.rs  build_tables.rs  generated_tables.rs  high_precision_tables.rs  low_memory_tables.rs
edgeguard-core/examples/: 01_basic_validation.rs  02_multi_sensor.rs  03_lookup_tables.rs  04_event_pipeline.rs  05_custom_stages.rs  06_error_handling.rs  07_kalman_fusion.rs  08_ekf_models.rs  09_multi_fusion.rs  10_streaming_data.rs
edgeguard-core/examples/embedded/: README.md  esp32_advanced.rs  esp32_basic.rs  esp32_wifi_stream.rs  xiao_bme688_advanced.rs  xiao_edge_ml.rs  xiao_nrf52840_sense.rs  xiao_quickstart.rs
edgeguard-core/src/: buffer.rs  errors.rs  events.rs  lib.rs  lookup.rs  pipeline.rs  queue.rs  stream.rs  time.rs  traits.rs
edgeguard-core/src/constants/: buffers.rs  fusion.rs  mod.rs  physics.rs  pipeline.rs  quality.rs  sensors.rs  time.rs
edgeguard-core/src/fusion/: confidence.rs  kalman.rs  mod.rs  models.rs  pipeline.rs
edgeguard-core/src/pipeline/: builder.rs  mod.rs  stages.rs  stream.rs
edgeguard-core/src/stream/: file.rs  memory.rs  mod.rs
edgeguard-core/src/stream/adapters/: backpressure.rs  batching.rs  combined.rs  mod.rs  rate_limited.rs
edgeguard-core/src/traits/: core.rs  fusion.rs  mod.rs  pipeline.rs  stream.rs  time.rs
edgeguard-core/src/validators/: humidity.rs  mod.rs  pressure.rs  temperature.rs  utils.rs
edgeguard-core/tests/: file_stream_tests.rs  fusion_integration.rs  pipeline_integration.rs  stream_integration.rs
edgeguard-core/tests/common/: generators.rs  harness.rs  mod.rs  scenarios.rs
edgeguard-ml/: Cargo.toml
edgeguard-ml/examples/: 11_ml_anomaly_detection.rs
edgeguard-ml/src/: forest.rs  lib.rs  node.rs  pipeline.rs  scoring.rs  tree.rs
edgeguard-python/: Cargo.toml  README.md  pyproject.toml
edgeguard-python/python/edgeguard/: __init__.py
edgeguard-python/python/tests/: test_basic.py
edgeguard-python/src/: conversion.rs  errors.rs  events.rs  helpers.rs  lib.rs  time.rs  validators.rs
edgeguard-schemas/: Cargo.toml
edgeguard-schemas/src/: lib.rs  physics.rs  registry.rs  validation.rs
edgeguard-schemas/src/schemas/: mod.rs
examples/data/: sensors.csv  sensors.jsonl
tests/: cross_module_integration.rs  e2e_integration.rs  performance_integration.rs
