[package]
name = "edgeguard-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Core validation engine for EdgeGuard - physics-aware sensor data validation"

[dependencies]
serde = { workspace = true, optional = true }
heapless = { workspace = true }
libm = { workspace = true }
fixed = { workspace = true, optional = true }
log = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }
thiserror-no-std = { workspace = true }
nb = { workspace = true }

[features]
default = ["std"]
std = ["serde", "log", "thiserror-no-std/std"]
embedded = ["defmt", "fixed"]
alloc = ["serde/alloc"]
low_memory_tables = []
high_precision_tables = []
schemas = []

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

# [[bench]]
# name = "validation"
# harness = false

[[example]]
name = "01_basic_validation"
path = "examples/01_basic_validation.rs"

[[example]]
name = "02_multi_sensor"
path = "examples/02_multi_sensor.rs"

[[example]]
name = "03_lookup_tables"
path = "examples/03_lookup_tables.rs"

[[example]]
name = "04_event_pipeline"
path = "examples/04_event_pipeline.rs"

[[example]]
name = "05_custom_stages"
path = "examples/05_custom_stages.rs"

[[example]]
name = "06_error_handling"
path = "examples/06_error_handling.rs"

[[example]]
name = "07_kalman_fusion"
path = "examples/07_kalman_fusion.rs"

[[example]]
name = "08_ekf_models"
path = "examples/08_ekf_models.rs"

[[example]]
name = "09_multi_fusion"
path = "examples/09_multi_fusion.rs"

[[example]]
name = "10_streaming_data"
path = "examples/10_streaming_data.rs"