[package]
name = "edgeguard-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
description = "Python bindings for EdgeGuard physics-aware IoT sensor validation"

[lib]
name = "edgeguard"
crate-type = ["cdylib"]

[dependencies]
# EdgeGuard crates
edgeguard-core = { path = "../edgeguard-core", features = ["std"] }
edgeguard-ml = { path = "../edgeguard-ml", features = ["std"] }
edgeguard-schemas = { path = "../edgeguard-schemas" }
edgeguard-connectors = { path = "../edgeguard-connectors" }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# Serialization for Python interop
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
pyo3-build-config = "0.20"

[features]
default = ["std"]
std = []
extension-module = ["pyo3/extension-module"]
abi3 = ["pyo3/abi3", "pyo3/abi3-py38"]